# cansat_2025

./: .gitignore  readme.md  todo.md
CANSAT dashboard/: app.py
CANSAT dashboard/assets/: samplevalues.csv
basestation/: code.py  rfm9x.py
laptop_basestation/: app.py  retrieve_data.py
laptop_basestation/assets/: samplevalues.csv  values.csv
posts/: posts.json
satellite/: basestation.psuedo  bmp280.py  code.py  convertedSatellite.py  main.psuedo  rfm9x.py  sat.py  satellite.psuedo  satellite.py
website/: 404.html  Cargo.toml  access.txt  credentials.json  fetch_posts.js  home.html  post_posts.js  style.css  team_only.html  tokens_granted.json  verify_identity.js
website/posts/: posts.json
website/src/: deprecated.rs  main.rs
